collect user settings (id and if using empatica), init things conditionally after this

--- a/templates/input_success.html
+++ b/templates/input_success.html
@@ -6,7 +6,7 @@
     <title>SmartBackend</title>
   </head>
   <body>
-    <h1>Form submitted</h1>
-    <p>You entered: {{ user_input }}</p>
+    <h1>Informasjon mottatt</h1>
+    <p>Din id: {{ user_input }}. Brukes empatica?: {{ empatica_used }}</p>
   </body>
 </html>
