support for two ids in emotion

--- a/templates/input_success.html
+++ b/templates/input_success.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Informasjon mottatt</h1>
-    <p>Din id: {{ user_input }}. Brukes empatica?: {{ empatica_used }}</p>
+    <p>ID til venstre person: {{ id_user_left }}.</p>
+    <p>ID til høyre person: {{ id_user_right }}</p>
+    <p>Brukes empatica?: {{ empatica_used }}</p>
   </body>
 </html>
