support for up to three students, update emotion and empatica using ids

--- a/templates/input_success.html
+++ b/templates/input_success.html
@@ -7,8 +7,9 @@
   </head>
   <body>
     <h1>Informasjon mottatt</h1>
-    <p>ID til venstre person: {{ id_user_left }}.</p>
-    <p>ID til høyre person: {{ id_user_right }}</p>
+    <p>ID til person 1: {{ id_1 }}</p>
+    <p>ID til person 2: {{ id_2 }}</p>
+    <p>ID til person 3: {{ id_3 }}</p>
     <p>Brukes empatica?: {{ empatica_used }}</p>
   </body>
 </html>
