more descriptive english comments in user id form

--- a/templates/input_success.html
+++ b/templates/input_success.html
@@ -6,10 +6,10 @@
     <title>SmartBackend</title>
   </head>
   <body>
-    <h1>Informasjon mottatt</h1>
-    <p>ID til person 1: {{ id_1 }}</p>
-    <p>ID til person 2: {{ id_2 }}</p>
-    <p>ID til person 3: {{ id_3 }}</p>
-    <p>Brukes empatica?: {{ empatica_used }}</p>
+    <h1>Information received</h1>
+    <p>ID of the left-most person: {{ id_1 }}</p>
+    <p>ID of the right-most person: {{ id_2 }}</p>
+    <p>ID of person 3: {{ id_3 }}</p>
+    <p>Is empatica in use?: {{ empatica_used }}</p>
   </body>
 </html>
