--- a/templates/input_success.html
+++ b/templates/input_success.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Information received</h1>
-    <p>ID of the left-most person: {{ id_1 }}</p>
-    <p>ID of the right-most person: {{ id_2 }}</p>
+    <p>ID of the leftmost person: {{ id_1 }}</p>
+    <p>ID of the rightmost person: {{ id_2 }}</p>
     <p>ID of person 3: {{ id_3 }}</p>
     <p>Is empatica in use?: {{ empatica_used }}</p>
   </body>
